[gd_scene format=4 uid="uid://dvly8p7g337i8"]

[ext_resource type="Script" uid="uid://cvxcabec87t10" path="res://scenes/core/room/room.gd" id="1_sgt8b"]
[ext_resource type="PackedScene" uid="uid://nkgfsyjm7ie7" path="res://scenes/game/rooms/biome/biome.tscn" id="2_y0kg4"]
[ext_resource type="PackedScene" uid="uid://ciebklw6tpwt7" path="res://scenes/game/rooms/background/background.tscn" id="3_euyd6"]
[ext_resource type="Texture2D" uid="uid://umwyrnuf5a65" path="res://assets/img/rooms/long-road/Asphalt.png" id="8_qtd6q"]
[ext_resource type="Script" uid="uid://c8h4p6rreiyix" path="res://scenes/core/interaction/hotspot/hotspot_death_trigger.gd" id="9_jyh21"]
[ext_resource type="Texture2D" uid="uid://fyopraeulp4q" path="res://assets/img/rooms/long-road/AsphaltRoad.png" id="9_rb1c6"]
[ext_resource type="TileSet" uid="uid://b4r8u5pw61oks" path="res://scenes/game/tilesets/road.tres" id="10_86rm5"]
[ext_resource type="Texture2D" uid="uid://blke63jaipwkh" path="res://assets/img/rooms/long-road/ParkComingSoon.png" id="11_dbfcv"]
[ext_resource type="PackedScene" uid="uid://dr3m40neq2x1o" path="res://scenes/game/characters/rasky.tscn" id="11_yagxe"]
[ext_resource type="Script" uid="uid://ucmcws1e11dk" path="res://scenes/core/interaction/hotspot/hotspot.gd" id="14_euyd6"]
[ext_resource type="Script" uid="uid://6cnw82p6ya55" path="res://scenes/core/interaction/hotspot/hotspot_action_trigger.gd" id="15_03l7c"]
[ext_resource type="Script" uid="uid://mn4wdeeplo2" path="res://scenes/core/areas/room_door.gd" id="15_dbfcv"]
[ext_resource type="Script" uid="uid://br03kradwjuk0" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="15_ej7g5"]
[ext_resource type="Script" uid="uid://d0xyrnkgp68i1" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="16_yagxe"]
[ext_resource type="Script" uid="uid://qia23iggn1qa" path="res://scenes/core/spawn/spawn_position.gd" id="19_0chix"]
[ext_resource type="Script" uid="uid://btwul30fxa5pu" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="23_u2geu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyh21"]
size = Vector2(20, 111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tp4py"]
size = Vector2(120, 152)

[sub_resource type="Resource" id="Resource_0chix"]
script = ExtResource("16_yagxe")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0chix"]
vertices = PackedVector2Array(-0.867188, -14.0313, 11.6484, 18.3828, -16.9609, 56, -222.719, 56, -256.563, 20.5781, -227.289, -14.0703, -170.891, -14.9922)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-171, -25, -232, -24, -270, 21, -227, 66, -12, 66, 23, 20, 6, -24)])

[node name="OtherLongRoadUnderConstruction" type="Node2D" unique_id=772529645 node_paths=PackedStringArray("phantom_camera", "camera")]
script = ExtResource("1_sgt8b")
room_name = "other_long_road_under_construction"
phantom_camera = NodePath("PhantomCamera2D")
camera = NodePath("Camera2D")

[node name="Biome" parent="." unique_id=34543219 instance=ExtResource("2_y0kg4")]

[node name="Background" parent="." unique_id=1692324388 instance=ExtResource("3_euyd6")]

[node name="Parallax2D" type="Parallax2D" parent="." unique_id=424395637]
scroll_offset = Vector2(0, -58)
repeat_size = Vector2(128, 0)
repeat_times = 20

[node name="Asphalt" type="Sprite2D" parent="Parallax2D" unique_id=1647001401]
z_index = -4
position = Vector2(-3, 173)
texture = ExtResource("8_qtd6q")

[node name="AsphaltRoad" type="Sprite2D" parent="Parallax2D" unique_id=258865732]
z_index = -4
position = Vector2(-3, 93)
texture = ExtResource("9_rb1c6")

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=134805687]
tile_map_data = PackedByteArray("AADo////AAACAAEAAADn////AAAAAAAAAADm////AAAAAAAAAADl////AAAEAAIAAADk////AAAAAAAAAADj////AAAAAAAAAADi////AAAAAAAAAADh////AAAEAAIAAADg////AAAAAAAAAADf////AAAAAAAAAADe////AAACAAIAAADd////AAAAAAAAAADc////AAAAAAAAAADb////AAACAAIAAADa////AAAAAAAAAADZ////AAAAAAAAAADY////AAACAAIAAADX////AAAAAAAAAADW////AAAAAAAAAADV////AAACAAIAAADU////AAAAAAAAAADT////AAAAAAAAAADS////AAACAAIAAADR////AAAAAAAAAADQ////AAAAAAAAAADP////AAACAAIAAADO////AAAAAAAAAADN////AAAAAAAAAADM////AAAAAAAAAADL////AAAAAAAAAADK////AAAAAAAAAADJ////AAAAAAAAAACt////AAAAAAAAAACu////AAAAAAAAAACv////AAAAAAAAAACw////AAAAAAAAAACx////AAAAAAAAAACy////AAAAAAAAAACz////AAAAAAAAAAC0////AAAAAAAAAAC1////AAAAAAAAAAC2////AAAAAAAAAAC3////AAAAAAAAAAC4////AAAAAAAAAAC5////AAAAAAAAAAC6////AAAAAAAAAAC7////AAAAAAAAAAC8////AAAAAAAAAAC9////AAAAAAAAAAC+////AAAAAAAAAAC/////AAAAAAAAAADA////AAAAAAAAAADB////AAAAAAAAAADC////AAAAAAAAAADD////AAAAAAAAAADE////AAAAAAAAAADF////AAAAAAAAAADG////AAAAAAAAAADH////AAAAAAAAAADI////AAAAAAAAAACJ////AAAAAAAAAACK////AAAAAAAAAACL////AAAAAAAAAACM////AAAAAAAAAACN////AAAAAAAAAACO////AAAAAAAAAACP////AAAAAAAAAACQ////AAAAAAAAAACR////AAAAAAAAAACS////AAAAAAAAAACT////AAAAAAAAAACU////AAAAAAAAAACV////AAAAAAAAAACW////AAAAAAAAAACX////AAAAAAAAAACY////AAAAAAAAAACZ////AAAAAAAAAACa////AAAAAAAAAACb////AAAAAAAAAACc////AAAAAAAAAACd////AAAAAAAAAACe////AAAAAAAAAACf////AAAAAAAAAACg////AAAAAAAAAACh////AAAAAAAAAACi////AAAAAAAAAACj////AAAAAAAAAACk////AAAAAAAAAACl////AAAAAAAAAACm////AAAAAAAAAACn////AAAAAAAAAACo////AAAAAAAAAACp////AAAAAAAAAACq////AAAAAAAAAACr////AAAAAAAAAACs////AAAAAAAAAABZ////AAAAAAAAAABa////AAAAAAAAAABb////AAAAAAAAAABc////AAAAAAAAAABd////AAAAAAAAAABe////AAAAAAAAAABf////AAAAAAAAAABg////AAAAAAAAAABh////AAAAAAAAAABi////AAAAAAAAAABj////AAAAAAAAAABk////AAAAAAAAAABl////AAAAAAAAAABm////AAAAAAAAAABn////AAAAAAAAAABo////AAAAAAAAAABp////AAAAAAAAAABq////AAAAAAAAAABr////AAAAAAAAAABs////AAAAAAAAAABt////AAAAAAAAAABu////AAAAAAAAAABv////AAAAAAAAAABw////AAAAAAAAAABx////AAAAAAAAAABy////AAAAAAAAAABz////AAAAAAAAAAB0////AAAAAAAAAAB1////AAAAAAAAAAB2////AAAAAAAAAAB3////AAAAAAAAAAB4////AAAAAAAAAAB5////AAAAAAAAAAB6////AAAAAAAAAAB7////AAAAAAAAAAB8////AAAAAAAAAAB9////AAAAAAAAAAB+////AAAAAAAAAAB/////AAAAAAAAAACA////AAAAAAAAAACB////AAAAAAAAAACC////AAAAAAAAAACD////AAAAAAAAAACE////AAAAAAAAAACF////AAAAAAAAAACG////AAAAAAAAAACH////AAAAAAAAAACI////AAAAAAAAAAA4////AAAAAAAAAAA5////AAAAAAAAAAA6////AAAAAAAAAAA7////AAAAAAAAAAA8////AAAAAAAAAAA9////AAAAAAAAAAA+////AAAAAAAAAAA/////AAAAAAAAAABA////AAAAAAAAAABB////AAAAAAAAAABC////AAAAAAAAAABD////AAAAAAAAAABE////AAAAAAAAAABF////AAAAAAAAAABG////AAAAAAAAAABH////AAAAAAAAAABI////AAAAAAAAAABJ////AAAAAAAAAABK////AAAAAAAAAABL////AAAAAAAAAABM////AAAAAAAAAABN////AAAAAAAAAABO////AAAAAAAAAABP////AAAAAAAAAABQ////AAAAAAAAAABR////AAAAAAAAAABS////AAAAAAAAAABT////AAAAAAAAAABU////AAAAAAAAAABV////AAAAAAAAAABW////AAAAAAAAAABX////AAAAAAAAAABY////AAAAAAAAAAD8/v//AAAAAAAAAAD9/v//AAAAAAAAAAD+/v//AAAAAAAAAAD//v//AAAAAAAAAAAA////AAAAAAAAAAAB////AAAAAAAAAAAC////AAAAAAAAAAAD////AAAAAAAAAAAE////AAAAAAAAAAAF////AAAAAAAAAAAG////AAAAAAAAAAAH////AAAAAAAAAAAI////AAAAAAAAAAAJ////AAAAAAAAAAAK////AAAAAAAAAAAL////AAAAAAAAAAAM////AAAAAAAAAAAN////AAAAAAAAAAAO////AAAAAAAAAAAP////AAAAAAAAAAAQ////AAAAAAAAAAAR////AAAAAAAAAAAS////AAAAAAAAAAAT////AAAAAAAAAAAU////AAAAAAAAAAAV////AAAAAAAAAAAW////AAAAAAAAAAAX////AAAAAAAAAAAY////AAAAAAAAAAAZ////AAAAAAAAAAAa////AAAAAAAAAAAb////AAAAAAAAAAAc////AAAAAAAAAAAd////AAAAAAAAAAAe////AAAAAAAAAAAf////AAAAAAAAAAAg////AAAAAAAAAAAh////AAAAAAAAAAAi////AAAAAAAAAAAj////AAAAAAAAAAAk////AAAAAAAAAAAl////AAAAAAAAAAAm////AAAAAAAAAAAn////AAAAAAAAAAAo////AAAAAAAAAAAp////AAAAAAAAAAAq////AAAAAAAAAAAr////AAAAAAAAAAAs////AAAAAAAAAAAt////AAAAAAAAAAAu////AAAAAAAAAAAv////AAAAAAAAAAAw////AAAAAAAAAAAx////AAAAAAAAAAAy////AAAAAAAAAAAz////AAAAAAAAAAA0////AAAAAAAAAAA1////AAAAAAAAAAA2////AAAAAAAAAAA3////AAAAAAAAAADF/v//AAAAAAAAAADG/v//AAAAAAAAAADH/v//AAAAAAAAAADI/v//AAAAAAAAAADJ/v//AAAAAAAAAADK/v//AAAAAAAAAADL/v//AAAAAAAAAADM/v//AAAAAAAAAADN/v//AAAAAAAAAADO/v//AAAAAAAAAADP/v//AAAAAAAAAADQ/v//AAAAAAAAAADR/v//AAAAAAAAAADS/v//AAAAAAAAAADT/v//AAAAAAAAAADU/v//AAAAAAAAAADV/v//AAAAAAAAAADW/v//AAAAAAAAAADX/v//AAAAAAAAAADY/v//AAAAAAAAAADZ/v//AAAAAAAAAADa/v//AAAAAAAAAADb/v//AAAAAAAAAADc/v//AAAAAAAAAADd/v//AAAAAAAAAADe/v//AAAAAAAAAADf/v//AAAAAAAAAADg/v//AAAAAAAAAADh/v//AAAAAAAAAADi/v//AAAAAAAAAADj/v//AAAAAAAAAADk/v//AAAAAAAAAADl/v//AAAAAAAAAADm/v//AAAAAAAAAADn/v//AAAAAAAAAADo/v//AAAAAAAAAADp/v//AAAAAAAAAADq/v//AAAAAAAAAADr/v//AAAAAAAAAADs/v//AAAAAAAAAADt/v//AAAAAAAAAADu/v//AAAAAAAAAADv/v//AAAAAAAAAADw/v//AAAAAAAAAADx/v//AAAAAAAAAADy/v//AAAAAAAAAADz/v//AAAAAAAAAAD0/v//AAAAAAAAAAD1/v//AAAAAAAAAAD2/v//AAAAAAAAAAD3/v//AAAAAAAAAAD4/v//AAAAAAAAAAD5/v//AAAAAAAAAAD6/v//AAAAAAAAAAD7/v//AAAAAAAAAADp////AAAAAAAAAADq////AAAAAAAAAADr////AAACAAEAAADs////AAAAAAAAAADt////AAAAAAAAAADu////AAACAAAAAADv////AAAAAAAAAADw////AAAAAAAAAADx////AAACAAAAAADy////AAAAAAAAAADz////AAAAAAAAAAD0////AAACAAAAAAD1////AAAAAAAAAAD2////AAAAAAAAAAD3////AAACAAAAAAD4////AAAAAAAAAAD5////AAAAAAAAAAD6////AAAAAAAAAAD7////AAACAAIAAAD8////AAAAAAAAAAD9////AAAAAAAAAAD+////AAACAAIAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAACAAIAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAACAAIAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAACAAIAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAACAAIAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAACAAIAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAAYAP//AAACAAIAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAACAAIAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAACAAEAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAAkAP//AAAAAAAAAAAlAP//AAAAAAAAAAAmAP//AAAAAAAAAAAnAP//AAAAAAAAAAAoAP//AAACAAEAAAApAP//AAAAAAAAAAAqAP//AAAAAAAAAAArAP//AAACAAAAAAAsAP//AAAAAAAAAAAtAP//AAAAAAAAAAAuAP//AAACAAAAAAAvAP//AAAAAAAAAAAwAP//AAAAAAAAAAAxAP//AAACAAAAAAAyAP//AAAAAAAAAAAzAP//AAAAAAAAAAA0AP//AAACAAAAAAA1AP//AAAAAAAAAAA3AP//AAAAAAAAAAA4AP//AAACAAAAAAA5AP//AAAAAAAAAAA6AP//AAACAAAAAAA7AP//AAAAAAAAAAA8AP//AAAAAAAAAAA9AP//AAACAAAAAAA+AP//AAAAAAAAAAA/AP//AAAAAAAAAABAAP//AAAAAAAAAABBAP//AAAAAAAAAABCAP//AAAAAAAAAABDAP//AAAAAAAAAABEAP//AAAAAAAAAABFAP//AAAAAAAAAABGAP//AAAAAAAAAABHAP//AAAAAAAAAABIAP//AAAAAAAAAABJAP//AAAAAAAAAABKAP//AAAAAAAAAABLAP//AAAAAAAAAABMAP//AAAAAAAAAABNAP//AAAAAAAAAABOAP//AAAAAAAAAABPAP//AAAAAAAAAABQAP//AAAAAAAAAABRAP//AAAAAAAAAABSAP//AAAAAAAAAABTAP//AAAAAAAAAABUAP//AAAAAAAAAABVAP//AAAAAAAAAABWAP//AAAAAAAAAABXAP//AAAAAAAAAABYAP//AAAAAAAAAABZAP//AAAAAAAAAABaAP//AAAAAAAAAABbAP//AAAAAAAAAABcAP//AAAAAAAAAABdAP//AAAAAAAAAABeAP//AAAAAAAAAABfAP//AAAAAAAAAABgAP//AAAAAAAAAABhAP//AAAAAAAAAABiAP//AAAAAAAAAABjAP//AAAAAAAAAABkAP//AAAAAAAAAABlAP//AAAAAAAAAABmAP//AAAAAAAAAABnAP//AAAAAAAAAABoAP//AAAAAAAAAABpAP//AAAAAAAAAABqAP//AAAAAAAAAABrAP//AAAAAAAAAABsAP//AAAAAAAAAABtAP//AAAAAAAAAABuAP//AAAAAAAAAABvAP//AAAAAAAAAABwAP//AAAAAAAAAABxAP//AAAAAAAAAAByAP//AAAAAAAAAABzAP//AAAAAAAAAAB0AP//AAAAAAAAAAB1AP//AAAAAAAAAAB2AP//AAAAAAAAAAB3AP//AAAAAAAAAAB4AP//AAAAAAAAAAB5AP//AAAAAAAAAAB6AP//AAAAAAAAAAB7AP//AAAAAAAAAAB8AP//AAAAAAAAAAB9AP//AAAAAAAAAAB+AP//AAAAAAAAAAB/AP//AAAAAAAAAACAAP//AAAAAAAAAACBAP//AAAAAAAAAACCAP//AAAAAAAAAACDAP//AAAAAAAAAACEAP//AAAAAAAAAACFAP//AAAAAAAAAACGAP//AAAAAAAAAACHAP//AAAAAAAAAACIAP//AAAAAAAAAACJAP//AAAAAAAAAACKAP//AAAAAAAAAACLAP//AAAAAAAAAACMAP//AAAAAAAAAACNAP//AAAAAAAAAACOAP//AAAAAAAAAACPAP//AAAAAAAAAACQAP//AAAAAAAAAACRAP//AAAAAAAAAACSAP//AAAAAAAAAACTAP//AAAAAAAAAACUAP//AAAAAAAAAACVAP//AAAAAAAAAACWAP//AAAAAAAAAACXAP//AAAAAAAAAACYAP//AAAAAAAAAACZAP//AAAAAAAAAACaAP//AAAAAAAAAACbAP//AAAAAAAAAACcAP//AAAAAAAAAACdAP//AAAAAAAAAACeAP//AAAAAAAAAACfAP//AAAAAAAAAACgAP//AAAAAAAAAAChAP//AAAAAAAAAACiAP//AAAAAAAAAACjAP//AAAAAAAAAACkAP//AAAAAAAAAAClAP//AAAAAAAAAACmAP//AAAAAAAAAACnAP//AAAAAAAAAACoAP//AAAAAAAAAACpAP//AAAAAAAAAACqAP//AAAAAAAAAACrAP//AAAAAAAAAACsAP//AAAAAAAAAACtAP//AAAAAAAAAACuAP//AAAAAAAAAACvAP//AAAAAAAAAACwAP//AAAAAAAAAACxAP//AAAAAAAAAACyAP//AAAAAAAAAACzAP//AAAAAAAAAAC0AP//AAAAAAAAAAC1AP//AAAAAAAAAAC2AP//AAAAAAAAAAC3AP//AAAAAAAAAAC4AP//AAAAAAAAAAC5AP//AAAAAAAAAAC6AP//AAAAAAAAAAC7AP//AAAAAAAAAAC8AP//AAAAAAAAAAC9AP//AAAAAAAAAAC+AP//AAAAAAAAAAC/AP//AAAAAAAAAADAAP//AAAAAAAAAADBAP//AAAAAAAAAADCAP//AAAAAAAAAADDAP//AAAAAAAAAADEAP//AAAAAAAAAADFAP//AAAAAAAAAADGAP//AAAAAAAAAADHAP//AAAAAAAAAADIAP//AAAAAAAAAADJAP//AAAAAAAAAADKAP//AAAAAAAAAADLAP//AAAAAAAAAADMAP//AAAAAAAAAADNAP//AAAAAAAAAADOAP//AAAAAAAAAADPAP//AAAAAAAAAADQAP//AAAAAAAAAADRAP//AAAAAAAAAADSAP//AAAAAAAAAADTAP//AAAAAAAAAADUAP//AAAAAAAAAADVAP//AAAAAAAAAADWAP//AAAAAAAAAADXAP//AAAAAAAAAADYAP//AAAAAAAAAADZAP//AAAAAAAAAADaAP//AAAAAAAAAADbAP//AAAAAAAAAADcAP//AAAAAAAAAADdAP//AAAAAAAAAADeAP//AAAAAAAAAADfAP//AAAAAAAAAADgAP//AAAAAAAAAADhAP//AAAAAAAAAADiAP//AAAAAAAAAADjAP//AAAAAAAAAADkAP//AAAAAAAAAADlAP//AAAAAAAAAADmAP//AAAAAAAAAADnAP//AAAAAAAAAADoAP//AAAAAAAAAADpAP//AAAAAAAAAADqAP//AAAAAAAAAADrAP//AAAAAAAAAADsAP//AAAAAAAAAADtAP//AAAAAAAAAADuAP//AAAAAAAAAADvAP//AAAAAAAAAADwAP//AAAAAAAAAADxAP//AAAAAAAAAADyAP//AAAAAAAAAADzAP//AAAAAAAAAAD0AP//AAAAAAAAAAD1AP//AAAAAAAAAAD2AP//AAAAAAAAAAD3AP//AAAAAAAAAAD4AP//AAAAAAAAAAD5AP//AAAAAAAAAAD6AP//AAAAAAAAAAD7AP//AAAAAAAAAAD8AP//AAAAAAAAAAD9AP//AAAAAAAAAAD+AP//AAAAAAAAAAD/AP//AAAAAAAAAAAAAf//AAAAAAAAAAABAf//AAAAAAAAAAACAf//AAAAAAAAAAADAf//AAAAAAAAAAAEAf//AAAAAAAAAAAFAf//AAAAAAAAAAAGAf//AAAAAAAAAAAHAf//AAAAAAAAAAAIAf//AAAAAAAAAAAJAf//AAAAAAAAAAAKAf//AAAAAAAAAAALAf//AAAAAAAAAAAMAf//AAAAAAAAAAANAf//AAAAAAAAAAAOAf//AAAAAAAAAAAPAf//AAAAAAAAAAAQAf//AAAAAAAAAAARAf//AAAAAAAAAAASAf//AAAAAAAAAAATAf//AAAAAAAAAAAUAf//AAAAAAAAAAAVAf//AAAAAAAAAAAWAf//AAAAAAAAAAAXAf//AAAAAAAAAAAYAf//AAAAAAAAAAAZAf//AAAAAAAAAAAaAf//AAAAAAAAAAAbAf//AAAAAAAAAAAcAf//AAAAAAAAAAAdAf//AAAAAAAAAAAeAf//AAAAAAAAAAAfAf//AAAAAAAAAAAgAf//AAAAAAAAAAAhAf//AAAAAAAAAAAiAf//AAAAAAAAAAAjAf//AAAAAAAAAAAkAf//AAAAAAAAAAAlAf//AAAAAAAAAAAmAf//AAAAAAAAAAAnAf//AAAAAAAAAAAoAf//AAAAAAAAAAApAf//AAAAAAAAAAAqAf//AAAAAAAAAAArAf//AAAAAAAAAAAsAf//AAAAAAAAAAAtAf//AAAAAAAAAAAuAf//AAAAAAAAAAAvAf//AAAAAAAAAAAwAf//AAAAAAAAAAAxAf//AAAAAAAAAAAyAf//AAAAAAAAAAAzAf//AAAAAAAAAAA0Af//AAAAAAAAAAA1Af//AAAAAAAAAAA2Af//AAAAAAAAAAA3Af//AAAAAAAAAAA4Af//AAAAAAAAAAA5Af//AAAAAAAAAAA6Af//AAAAAAAAAAA2AP//AAACAAAAAAA=")
tile_set = ExtResource("10_86rm5")

[node name="ParkComingSoon" type="Sprite2D" parent="." unique_id=1781504927]
position = Vector2(368, -44)
texture = ExtResource("11_dbfcv")

[node name="StaticBodies" type="Node" parent="." unique_id=1093025555]

[node name="StaticBody2D2" type="StaticBody2D" parent="StaticBodies" unique_id=1675131232]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBodies/StaticBody2D2" unique_id=774293481]
polygon = PackedVector2Array(-301, -30, -301, 77, 493, 76, 494, -33, 519, -33, 520, 85, -317, 90, -317, -30)

[node name="Cliff" type="Node2D" parent="." unique_id=285962114]
position = Vector2(-119, -24)
script = ExtResource("14_euyd6")
object_name = "cliff"
metadata/_custom_type_script = "uid://ucmcws1e11dk"

[node name="HotspotDeathTrigger" type="Area2D" parent="Cliff" unique_id=1981987260]
collision_layer = 32
script = ExtResource("9_jyh21")
death_action = "cliff"
run_death_action_in_range = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cliff/HotspotDeathTrigger" unique_id=786331572]
position = Vector2(0, -15)
polygon = PackedVector2Array(-183, 5, -181, -14, 638, -11, 638, 6)

[node name="Freeway" type="Node2D" parent="." unique_id=46722775]
position = Vector2(484, 17)
script = ExtResource("14_euyd6")
object_name = "freeway"
metadata/_custom_type_script = "uid://ucmcws1e11dk"

[node name="HotspotActionTrigger" type="Area2D" parent="Freeway" unique_id=821345821]
collision_layer = 32
script = ExtResource("15_03l7c")
action = "freeway"
run_action_in_range = true
metadata/_custom_type_script = "uid://6cnw82p6ya55"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Freeway/HotspotActionTrigger" unique_id=979473728]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_jyh21")

[node name="Rasky" parent="." unique_id=1920621068 instance=ExtResource("11_yagxe")]
position = Vector2(-112, -21)
use_scale_factor = true
scale_factor = 200.0
scale_factor_max = 1.5

[node name="RoomDoors" type="Node2D" parent="." unique_id=1472651778]

[node name="RoomDoor" type="Area2D" parent="RoomDoors" unique_id=841122727 node_paths=PackedStringArray("spawn_position")]
position = Vector2(-320, 1)
collision_layer = 64
script = ExtResource("15_dbfcv")
door_id = "1"
goto_door_id = "3"
scene_path = "res://scenes/game/rooms/conbini/conbini_road.tscn"
spawn_position = NodePath("SpawnPosition")
metadata/_custom_type_script = "uid://mn4wdeeplo2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDoors/RoomDoor" unique_id=1273506222]
position = Vector2(-34, 29)
shape = SubResource("RectangleShape2D_tp4py")

[node name="SpawnPosition" type="Node2D" parent="RoomDoors/RoomDoor" unique_id=1466576371]
position = Vector2(57, -10)
script = ExtResource("19_0chix")
metadata/_custom_type_script = "uid://qia23iggn1qa"

[node name="Camera2D" type="Camera2D" parent="." unique_id=766248197]
position = Vector2(-87, -45)
zoom = Vector2(1.5, 1.5)
limit_left = -300
limit_top = -500
limit_right = 500
limit_bottom = 75

[node name="PhantomCameraHost" type="Node" parent="Camera2D" unique_id=115863121]
process_priority = 300
process_physics_priority = 300
script = ExtResource("23_u2geu")
metadata/_custom_type_script = "uid://btwul30fxa5pu"

[node name="PhantomCamera2D" type="Node2D" parent="." unique_id=554172721]
top_level = true
position = Vector2(-86.66667, -45)
script = ExtResource("15_ej7g5")
follow_mode = 2
zoom = Vector2(1.5, 1.5)
snap_to_pixel = true
tween_resource = SubResource("Resource_0chix")
tween_on_load = false
follow_damping = true
follow_damping_value = Vector2(1, 1)
limit_left = -300
limit_top = -500
limit_right = 500
limit_bottom = 75
metadata/_custom_type_script = "uid://br03kradwjuk0"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." unique_id=873289154]
navigation_polygon = SubResource("NavigationPolygon_0chix")
